--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ CherryPy==16.0.2
 Mako==1.0.7
 MarkupSafe==1.0
 more-itertools==4.2.0
-pkg-resources==0.0.0
 portend==2.3
+python-dateutil==2.7.3
 pytz==2018.4
 six==1.11.0
 tempora==1.11
