--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 backports.functools-lru-cache==1.5
-cheroot==6.3.2
-CherryPy==16.0.2
+cheroot==6.4.0
+CherryPy==17.3.0
+contextlib2==0.5.5
+coverage==4.5.1
+jaraco.functools==1.20
 Mako==1.0.7
 MarkupSafe==1.0
-more-itertools==4.2.0
+more-itertools==4.3.0
 portend==2.3
 python-dateutil==2.7.3
-pytz==2018.4
+pytz==2018.5
 six==1.11.0
-tempora==1.11
+tempora==1.13
+zc.lockfile==1.3.0
