Add initial graphing support

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,35 @@
+astroid==2.0.4
+atomicwrites==1.2.1
+attrs==18.2.0
+autopep8==1.4
 backports.functools-lru-cache==1.5
+-e git+git@github.com:alan412/CheckMeIn.git@3505ea7832673a66caa54b59201e221e04af1b85#egg=CheckMeIn
 cheroot==6.4.0
 CherryPy==17.3.0
 contextlib2==0.5.5
 coverage==4.5.1
+cycler==0.10.0
+isort==4.3.4
 jaraco.functools==1.20
+kiwisolver==1.0.1
+lazy-object-proxy==1.3.1
 Mako==1.0.7
 MarkupSafe==1.0
+matplotlib==2.2.3
+mccabe==0.6.1
 more-itertools==4.3.0
+numpy==1.15.1
+pluggy==0.7.1
 portend==2.3
+py==1.6.0
+pycodestyle==2.4.0
+pylint==2.1.1
+pyparsing==2.2.0
+pytest==3.7.4
+pytest-cov==2.5.1
 python-dateutil==2.7.3
 pytz==2018.5
 six==1.11.0
 tempora==1.13
+wrapt==1.10.11
 zc.lockfile==1.3.0
