Adding robots.txt

--- a/production.conf
+++ b/production.conf
@@ -12,6 +12,10 @@ tools.staticdir.root : os.path.abspath(os.getcwd())
 tools.staticfile.on : True
 tools.staticfile.filename : os.path.join(os.getcwd(), 'static/favicon.ico')
 
+[/robots.txt] 
+tools.staticfile.on : True 
+tools.staticfile.filename : os.path.join(os.getcwd(),  'static/robots.txt') 
+
 [/static]
 tools.staticdir.on : True
 tools.staticdir.dir : 'static'
