--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [tool:pytest]
 python_files = tests/*.py
-addopts = --cov=../CheckMeIn --cov-report html
+addopts = -x --no-cov-on-fail --cov=../CheckMeIn --cov-report html
 
 [coverage:report]
 # Regexes for lines to exclude from consideration
@@ -23,6 +23,7 @@ omit =
    setup.py
    tests/*
    venv/*
+   venv3/*
 [coverage:paths]
 source =
    *.py
