--- a/requirements.txt
+++ b/requirements.txt
@@ -3,18 +3,21 @@ atomicwrites==1.2.1
 attrs==18.2.0
 autopep8==1.4
 backports.functools-lru-cache==1.5
-cheroot==6.4.0
-CherryPy==18.5.0
+cheroot==8.3.0
+CherryPy==18.6.0
 contextlib2==0.5.5
 coverage==4.5.1
 cycler==0.10.0
 isort==4.3.4
+jaraco.classes==3.1.0
+jaraco.collections==3.0.0
 jaraco.functools==1.20
+jaraco.text==3.2.0
 kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 Mako==1.0.7
 MarkupSafe==1.0
-matplotlib==3.2.0
+matplotlib==2.2.3
 mccabe==0.6.1
 more-itertools==4.3.0
 numpy==1.15.1
