--- a/development.conf
+++ b/development.conf
@@ -4,6 +4,11 @@ server.socket_port : 8089
 
 [/]
 tools.staticdir.root : os.path.abspath(os.getcwd())
+tools.sessions.on : True
+tools.sessions.storage_class : cherrypy.lib.sessions.FileSession
+tools.sessions.storage_path : os.path.join(os.getcwd(), 'sessions')
+tools.sessions.timeout : 60 * 24 * 365    
+tools.sessions.httponly : True
 
 [/favicon.ico]
 tools.staticfile.on : True
