--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ atomicwrites==1.2.1
 attrs==18.2.0
 autopep8==1.4
 backports.functools-lru-cache==1.5
+cffi==1.14.6
 cheroot==8.3.0
 CherryPy==18.6.0
 contextlib2==0.5.5
 coverage==4.5.1
+cryptography==3.4.7
 cycler==0.10.0
 isort==4.3.4
 jaraco.classes==3.1.0
@@ -17,16 +19,19 @@ kiwisolver==1.0.1
 lazy-object-proxy==1.3.1
 Mako==1.0.7
 MarkupSafe==1.0
-matplotlib==2.2.3
+matplotlib==3.4.3
 mccabe==0.6.1
 more-itertools==4.3.0
-numpy==1.15.1
+numpy==1.21.2
+passlib==1.7.4
+Pillow==8.3.1
 pluggy==0.7.1
 portend==2.3
 py==1.6.0
 pycodestyle==2.4.0
+pycparser==2.20
 pylint==2.1.1
-pyparsing==2.2.0
+pyparsing==2.2.1
 pytest==3.7.4
 pytest-cov==2.5.1
 python-dateutil==2.7.3
