Add ability to specify database
Creates database directory if it doesn't exist

--- a/testing.conf
+++ b/testing.conf
@@ -1,11 +1,8 @@
 [global]
-log.error_file : os.path.join(os.getcwd(), 'checkMeIn.log')
-log.access_file : ''
-log.screen : False
 server.socket_host : '127.0.0.1'
-server.socket_port : 8447
-database.path : 'data/'
-database.name : 'checkMeIn.db'
+server.socket_port : 8089
+database.path : 'testData/'
+database.name : 'testCheckMeIn.db'
 
 [/]
 tools.staticdir.root : os.path.abspath(os.getcwd())
@@ -18,10 +15,6 @@ tools.sessions.httponly : True
 [/favicon.ico]
 tools.staticfile.on : True
 tools.staticfile.filename : os.path.join(os.getcwd(), 'static/favicon.ico')
-
-[/robots.txt] 
-tools.staticfile.on : True 
-tools.staticfile.filename : os.path.join(os.getcwd(),  'static/robots.txt') 
 
 [/static]
 tools.staticdir.on : True
