--- a/development.conf
+++ b/development.conf
@@ -1,6 +1,8 @@
 [global]
 server.socket_host : '127.0.0.1'
 server.socket_port : 8089
+database.path : 'data/'
+database.name : 'checkMeIn.db'
 
 [/]
 tools.staticdir.root : os.path.abspath(os.getcwd())
