--- a/testing.conf
+++ b/testing.conf
@@ -8,7 +8,7 @@ database.name : 'testCheckMeIn.db'
 tools.staticdir.root : os.path.abspath(os.getcwd())
 tools.sessions.on : True
 tools.sessions.storage_class : cherrypy.lib.sessions.FileSession
-tools.sessions.storage_path : os.path.join(os.getcwd(), 'sessions')
+tools.sessions.storage_path : os.path.join(os.getcwd(), 'testData/')
 tools.sessions.timeout : 60 * 24 * 365    
 tools.sessions.httponly : True
 
