Beginning part of SSE (not enabled yet)

--- a/development.conf
+++ b/development.conf
@@ -1,6 +1,8 @@
 [global]
 server.socket_host : '127.0.0.1'
 server.socket_port : 8089
+server.thread_pool: 25
+server.socket_queue_size: 10
 database.path : 'data/'
 database.name : 'checkMeIn.db'
 
